fix: CSS 버그 수정(북마크, 폰트, overflow 등)

--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@ body {
   height: 100%;
   background-color: #1e222a;
   background-image: url("./imgs/boongbg3.png");
-  background-size: cover; /* 이미지를 화면 크기에 맞게 */
+  background-size: contain; /* 이미지를 높이에 맞추고 */
   background-position: center center; /* 배경 이미지를 수평 및 수직 중앙에 정렬 */
   background-repeat: no-repeat; /* 이미지 반복 방지 */
   display: flex;
@@ -50,12 +50,14 @@ body {
 /* 왼쪽 섹션 (시계 + 만트라) */
 .left-section {
   text-align: center;
+  max-width: 600px;
 }
 
 /* 오른쪽 섹션 (위젯) */
 .right-section {
   display: flex;
   flex-direction: column;
+  max-width: 600px;
 }
 
 .right-bottom {
